--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     <div>
         <form action="">
             <div class="imgcontainer">
-                <img src="himura.jpg" alt="Avatar" class="avatar">
+                <img src="project building pic.jpg" alt="Avatar" class="avatar">
             </div>
                 
             <div class="container">
