--- a/about.html
+++ b/about.html
@@ -5,13 +5,28 @@
     <title>About</title>
     <link rel="stylesheet" href="about.css">
 </head>
+
+
+
+
 <body>
+ 
+  <font size = "3">What is <font color = "#2F4F4F"><strong>House Rent</strong></font> and why?</font><br>
+    <font size = "3"><i>~House Rent is such a website where you can find out easily a house that you desired to live by rent.If it becomes necessary for a family or a person to live in a place but not permanently, House Rent can easily help you finding out that kind of houses or flats you've asked for.We strict maintain our terms and policy and listen to you to provide the best service.</i></font>
+    <br><br>
+   <center><font color = "Green"><font size = "4"><strong><i>Created by -</i></strong></font></font></center>
+   
     <div class="talha">
-        <h1>Talha Bin Jafar</h1>
+       <font color = "#71009e"><font size = "4"><strong>Talha Bin Jafar</strong></font></font>
         <h4>Student of SUST</h4>
     </div>
     <div class="sArnab">
-        <h1>Abid Hasan</h1>
+       <font color = "#71009e"><font size = "4"><strong>Abid Hasan</strong></font></font>
         <h4>Student of SUST</h4>
     </div>
+       
 </body>
+
+
+
+</html>
